# pseudo

./: .gitignore  PLAN.md  README.md  pyproject.toml
pseudo/: cli.py
